--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-lodash": "^2.1.2",
     "vue-property-decorator": "^8.4.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^4.1.3",
     "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-e2e-cypress": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "cypress": "^4.1.0",
+    "cypress-vue-unit-test": "^1.11.7",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "tailwindcss": "^1.2.0",
     "vue-cli-plugin-tailwind": "~1.2.0",
+    "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
